src/components/ModalWithForm/ModalWithForm.css
.modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;
}

.modal__container {
  position: relative;
  padding: 36px;
  background-color: #fff;
  z-index: 0;
  border-radius: 20px;
}

.modal__title {
  font-family: "Cabinet Grotesk", sans-serif;
  font-weight: 700;
  font-size: 16px;

  line-height: 20px;

  margin: 0 0 20px;
}

.modal__form {
  display: flex;
  flex-direction: column;
}

.modal__input__title {
  font-family: "Cabinet Grotesk", sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 20px;
  margin: 0 0 12px;
}

.modal__input {
  width: 440px;
  margin-bottom: 24px;
  border-style: none;
  padding: 4px;
  border-bottom: 1px solid #000;
  font-size: 14px;
}

.modal__radio__list {
  padding: 0;
  list-style: none;
  gap: 8px;
  margin: 0 0 32px;
  display: flex;
  flex-direction: column;
}

.modal__radio__label {
  font-family: "Cabinet Grotesk", sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 20px;
  color: rgba(0, 0, 0, 0.5);
}

.modal__radio__input {
  margin-right: 5px;
}

.modal__radio__input:checked + .modal__radio__label {
  color: #000;
}

.modal__submit-button {
  font-family: "Cabinet Grotesk", sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 20px;
  color: #fff;
  border-style: none;
  border-radius: 4px;
  max-width: 124px;
  padding: 8px 16px;
  white-space: nowrap;
  background-color: rgba(0, 0, 0, 0.3);
}

.modal__submit-button:hover {
  background-color: rgba(0, 0, 0, 0.6);
}

.modal__close__btn {
  background: none;
  position: absolute;
  left: 470px;
  top: 20px;
  border: none;
  cursor: pointer;
}

.modal__btn__img {
  width: 20px;
  height: 20px;
}

.modal__error {
  color: #e53935;
  font-size: 12px;
  margin: 0;
  padding: 0;
  min-height: 16px;
}

.modal__error:empty {
  display: none;
}

@media screen and (max-width: 760px) {
  .modal__container {
    width: 350px;
  }
  .modal__input {
    max-width: 350px;
  }
  .modal__close__btn {
    left: 380px;
    top: 20px;
  }
}

